maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:10: error: not found: value random3
  var r = random3()
          ^IslandMaze:11: error: missing arguments for method & in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
  while (!estFaceMur() & getDirection()=Direction.NORTH) {
                       ^IslandMaze:12: error: not found: value random3
    r = random3()
        ^