maze.island.IslandMaze.scala.code
override def run() {
  rejoindrelenord()
  while (!estSurBiscuit())
  	keepHandOnSideWall()
  prendBiscuit()
}

def rejoindrelenord() {
  var r = random3()
  while (!estFaceMur() & getDirection()=Direction.NORTH) {
    r = random3()
    if (r==0 && !estFaceMur())
      avance()
    if (r==1)
      gauche()
    if (r==2)
      droite()
  }
droite()
}

def keepHandOnSideWall() {
  gauche()
  if (estFaceMur()) {
  	droite()
    if (estFaceMur())
    	droite()
    else
    	avance()
  }
  else
  	avance()
}
